# CS184_Final_Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.local.json
src/: app.cpp  main.cpp
src/renderer/: camera.h  dome.h  renderer.cpp  shader.cpp  shader.h
src/shaders/: density.comp  domain.frag  domain.vert  domain_optics.frag  floor.frag  floor.vert  glass.frag  glass.vert  particles.frag  particles.vert
src/sim/: grid.cu  grid.h  p2g.cuh  p2g.h  particle.cpp  particle.cu  particle.h  particle_cpu.h  particle_solver.cu  pressure_solver.cu
